fixing bug in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
     </style>
     <script>
-        let code = "<script src='https://sapiensprojects.github.io/CmptWebPage/CmptWebPage.js'>" + "</" + "script>";
+        let code = "<script src='https://sapiensprojects.github.io/CmptWebPage/CmptWebPage.js' type='module'>" + "</" + "script>";
         document.querySelector("pre").innerText = code;        
     </script>
 </body>
