--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         }
     </style>
     <script>
-        let code = String.raw(`import { CmptWebPage } from "https://sapiensprojects.github.io/CmptWebPage/CmptWebPage.js";
-`)
+        let code = `import { CmptWebPage } from "https://sapiensprojects.github.io/CmptWebPage/CmptWebPage.js";
+`
         document.querySelector("pre").innerText = code;        
     </script>
 </body>
